--- a/LimeSDRConf.ini
+++ b/LimeSDRConf.ini
@@ -14,4 +14,4 @@ Quadrature = 480000
 Audio_Decimation = 10
 
 [Storage]
-File = C:\Users\bryso\Downloads\SDRdata
+File = C:\Users\bryso\OneDrive\Documents\Audimus\Pi\Recordings\SDRTestRecordingsRaw
