--- a/Pi/LimeSDRConf.ini
+++ b/Pi/LimeSDRConf.ini
@@ -14,5 +14,5 @@ quadrature = 480000
 audio_decimation = 10
 
 [Storage]
-file = /home/pi/Audimus/Recordings/SDRdata2025-03-08-00:17:08
+file = /home/pi/Audimus/Recordings/SDRdata2025-03-08-00:17:08______
 
