--- a/LimeSDRConf.ini
+++ b/LimeSDRConf.ini
@@ -1,5 +1,5 @@
 [Radio]
-Sample_Rate = 2000000
+Sample_Rate = 2400000
 Frequency = 96300000
 
 [Filter]
@@ -8,10 +8,10 @@ Cut_Off_Frequency = 75000
 Transmission_Width = 25000
 
 [Demodulation]
-Interpolation = 6
-Decimation = 25
-Quadrature = 480000
-Audio_Decimation = 10
+Interpolation = 1
+Decimation = 10
+Quadrature = 240000
+Audio_Decimation = 5
 
 [Storage]
-File = C:\Users\bryso\OneDrive\Documents\Audimus\Pi\Recordings\SDRTestRecordingsRaw
+File = C:\Users\bryso\OneDrive\Documents\Audimus\SDRTestRecordingsRaw
