--- a/Pi/LimeSDRConf.ini
+++ b/Pi/LimeSDRConf.ini
@@ -12,6 +12,12 @@ interpolation = 1
 decimation = 10
 quadrature = 240000
 audio_decimation = 5
+
 [Storage]
-file = /home/pi/Audimus/Recordings/SDRdata2025-03-08-00:17:08______
+folder = Recordings/2025-03-09-00:17:08
+file1 = Recordings/2025-03-09-00:17:08/SectionZZ1
+file2 = Recordings/2025-03-09-00:17:08/SectionZZ2
+file3 = Recordings/2025-03-09-00:17:08/SectionZZ3
+file4 = Recordings/2025-03-09-00:17:08/Section4
+file5 = Recordings/2025-03-09-00:17:08/Section5
 
