--- a/LimeSDRConf.ini
+++ b/LimeSDRConf.ini
@@ -14,4 +14,4 @@ Quadrature = 240000
 Audio_Decimation = 5
 
 [Storage]
-File = C:\Users\bryso\OneDrive\Documents\Audimus\SDRTestRecordingsRaw
+file = C:\Users\bryso\OneDrive\Documents\Audimus\SDRTestRecordingsRaw
