--- a/Pi/LimeSDRConf.ini
+++ b/Pi/LimeSDRConf.ini
@@ -14,10 +14,6 @@ quadrature = 240000
 audio_decimation = 5
 
 [Storage]
-folder = Recordings/2025-03-09-00:17:08
-file1 = Recordings/2025-03-09-00:17:08/SectionZZ1
-file2 = Recordings/2025-03-09-00:17:08/SectionZZ2
-file3 = Recordings/2025-03-09-00:17:08/SectionZZ3
-file4 = Recordings/2025-03-09-00:17:08/Section4
-file5 = Recordings/2025-03-09-00:17:08/Section5
+folder = Recordings/Pass2025-03-09-00-17-08
+file = Recordings/Section1
 
