--- a/Pi/LimeSDRConf.ini
+++ b/Pi/LimeSDRConf.ini
@@ -14,6 +14,7 @@ quadrature = 240000
 audio_decimation = 5
 
 [Storage]
-folder = Recordings/Pass2025-03-09-00-17-08
-file = Recordings/Section1
-
+file=/home/pi/Audimus/Recordings/Pass2025-04-15_20-01-42/Section1
+folder=/home/pi/Audimus/Recordings/Pass2025-04-15_20-01-42
+FileSize=6760000
+Recording_num=5
